[project]
name = "tennis-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chunked>=0.0.1",
    "joblib>=1.5.3",
    "lap>=0.5.13",
    "more-itertools>=11.1.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "protobuf>=7.35.1",
    "scikit-learn==1.6.1",
    "semchunk>=4.1.1",
    "sentencepiece>=0.2.1",
    "supervision>=0.28.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.0",
    "ultralytics>=8.4.67",
    "umap-learn>=0.5.12",
]
